--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "url": "https://github.com/TriHydera/hashutils"
   },
     "type": "library",
-    "license": "GPL",
+    "license": "GPL-1.0-only",
     "autoload": {
         "psr-4": {
             "Hashutils\\": "src/"
